birsürü şey eklendi

--- a/LocationApp/GoogleService-Info.plist
+++ b/LocationApp/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>571408658654-u11rsi3ffuve6i6vb6eaf6a4vu32ldbm.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.571408658654-u11rsi3ffuve6i6vb6eaf6a4vu32ldbm</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC6zBbKw8keFRXbjQ8XrWwVLgAl22eLSjA</string>
 	<key>GCM_SENDER_ID</key>
